Building ROS entirely from source. Actually seems to work.

--- a/examples/ros/snapcraft.yaml
+++ b/examples/ros/snapcraft.yaml
@@ -5,8 +5,8 @@ icon: icon.svg
 description: A really small ROS example
 
 apps:
-  rosmaster:
-    command: bin/roscore-rosmaster-service
+  roscore:
+    command: roscore
     daemon: simple
     uses: [listener]
   listener:
