grammar: support `to` statement in source
This involves the introduction of a transformation function to
optionally transform primitives. This is done because package names
coming from the `to` statement need to have the architecture appended to
them, but URLs/directory names (such as those used in `source`)
certainly do not.

Signed-off-by: Kyle Fazzari <kyrofa@ubuntu.com>

--- a/schema/snapcraft.yaml
+++ b/schema/snapcraft.yaml
@@ -17,6 +17,12 @@ definitions:
                 ^on\s+.+$:
                   $ref: "#/definitions/grammar-string"
             - type: object
+              usage: "to <selector>[,<selector>...]:"
+              additionalProperties: false
+              patternProperties:
+                ^to\s+.+$:
+                  $ref: "#/definitions/grammar-string"
+            - type: object
               usage: "try:"
               additionalProperties: false
               patternProperties:
