cli: introduce snapcraftctl
Rather than using shell functions for this, use a dedicated command that
does all the FIFO magic in Python instead of shell. Draws a nice
parallel to snapctl.

Signed-off-by: Kyle Fazzari <kyrofa@ubuntu.com>

--- a/schema/snapcraft.yaml
+++ b/schema/snapcraft.yaml
@@ -444,7 +444,7 @@ properties:
             default: ''
           build:
             type: string
-            default: 'snapcraft_build'
+            default: 'snapcraftctl build'
           prepare:
             type: string
             default: ''
