--- a/spread_tests/snap/git-ubuntu/task.yaml
+++ b/spread_tests/snap/git-ubuntu/task.yaml
@@ -3,21 +3,21 @@ warn-timeout: 30m
 kill-timeout: 2h
 
 prepare: |
-  # Fetch git-ubuntu and build it
+  # Fetch git-ubuntu
   git clone -b master https://git.launchpad.net/usd-importer
-
-  # Now build it
-  cd usd-importer
-  snapcraft
-
-  # Clean machine as much as possible
-  sudo apt autoremove --yes
 
 restore: |
   # Remove the build snap
   rm -rf usd-importer
 
 execute: |
+  # Build git-ubuntu
+  cd usd-importer
+  snapcraft
+
+  # Clean machine as much as possible now that it's built
+  sudo apt autoremove --yes
+
   # Install the snap and run its awesome self-test
   sudo snap install usd-importer/*.snap --dangerous --classic
   git-ubuntu.self-test
