--- a/spread.yaml
+++ b/spread.yaml
@@ -15,6 +15,8 @@ backends:
           kernel: GRUB 2
           workers: 3
 
+kill-timeout: 30m
+
 prepare: |
   # apt update is hanging on security.ubuntu.com with IPv6, prefer IPv4 over IPv6
   cat <<EOF > gai.conf
