--- a/tests/spread/run/cmake/snap/snapcraft.yaml
+++ b/tests/spread/run/cmake/snap/snapcraft.yaml
@@ -3,12 +3,9 @@ version: 0.1
 summary: test the cmake plugin
 description: |
   This is a basic cmake snap. It just prints a hello world.
-  If you want to add other functionalities to this snap, please don't.
-  Make a new one.
-icon: icon.png
-confinement: strict
 
-build-packages: [gcc, libc6-dev]
+grade: devel
+confinement: strict
 
 apps:
   cmake-hello:
@@ -18,3 +15,4 @@ parts:
   cmake-project:
     plugin: cmake
     source: .
+    build-packages: [gcc]
