--- a/templates/gtk3/src/Makefile
+++ b/templates/gtk3/src/Makefile
@@ -22,8 +22,8 @@ $(DEST_LAUNCHER):
 	@cat $(SRC_DIR)/launcher-specific >> $(DEST_LAUNCHER)
 	@cat $(SRC_DIR)/mark-and-exec >> $(DEST_LAUNCHER)
 	@echo "USE_$(FLAVOR)=true" >> $(FLAVOR_FILE)
-	gcc -Wall -O2 -o $(BINDTEXTDOMAIN) -fPIC -shared $(SRC_DIR)/../src/bindtextdomain.c -ldl
-		
+	gcc -Wall -O2 -o $(BINDTEXTDOMAIN) -fPIC -shared $(SRC_DIR)/bindtextdomain.c -ldl
+
 install: $(DEST_LAUNCHER)
 	install -D -m755 $(DEST_LAUNCHER) $(DESTDIR)/bin/$(DEST_LAUNCHER)
 	install -D -m644 $(FLAVOR_FILE) $(DESTDIR)/
