--- a/requirements.txt
+++ b/requirements.txt
@@ -24,3 +24,5 @@ tabulate==0.7.5
 python-debian==0.1.28
 chardet==2.3.0
 cx_Freeze>=5.0.2; sys_platform == 'win32'
+alembic==0.8.2
+SQLAlchemy==1.0.11
